Przebuduj przegląd na pulpit z pięcioma strefami czytania (D32)
Ekran odpowiadał tylko na „co ja mam": cztery liczby i pięć list słupków.
Teraz odpowiada też na „czy da się z tego zagrać" i wygląda jak pulpit,
a nie jak zrzut z bazy.

Backend (agregaty nadal w bazie, D27):
- kontrakt GET /api/library/overview dzieli się na pięć grup zamiast płaskiej
  listy pól — konstruktor z kilkunastoma argumentami List<Bucket> nie miał jak
  wyłapać przestawienia dwóch rozkładów miejscami
- doszły: czas grania i liczba wykonawców biblioteki, średnie tempo, utwory
  poza wszystkimi setami, dekady, długości, popularność, pewność analizy AI,
  źródła wpisów, top tagi i style, macierz tempo × energia, uśredniony profil
  brzmienia z metryk (D24) i próbka ostatnio dodanych z okładkami
- rozkłady kategorialne schodzą jednym union all z etykietą wymiaru; SQL
  wyprowadzony do LibraryDistributionsRepository, żeby żadna klasa nie urosła
  ponad limit z docs/rules/codestyle.md
- koszyk zastępczy „BEZ TONACJI" omija parser Camelot: zaczyna się od nazwy
  dźwięku, więc bez tego wyjątku wszystkie utwory bez tonacji lądowały na 1B

Front:
- pulpit na sześciokolumnowej siatce; moduły dostają szerokość pod swój wykres
- koło Camelot z obrysem tonacji zgodnych z dominującą (D25), pajęczyna cech
  audio, macierz tempo × energia, wstęgi, wskaźnik pierścieniowy — inline w SVG,
  bez biblioteki wykresów i bez zasobów z sieci (D23)
- sekcja „co z tego wynika" liczona z danych, które i tak przyszły
  (overviewInsights.ts), więc sprawdzalna testem bez renderowania pulpitu
- animacje jako dekoracja: przy prefers-reduced-motion wszystko startuje
  w stanie końcowym, a nie znika
- osobna rampa kolorów wykresów (--viz-1..6) obok kolorów semantycznych motywu,
  żeby podmiana palety pod większy system była podmianą sześciu zmiennych

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XFf9MUjeAMkBvA1WyT5QJ3